--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body> 
            
         <br>
-          <img id="port" src="./Cont/port.img.jpgg.jpg" alt="............................">
+          <img id="port" src="port.img.jpgg.jpg" alt="............................">
           <br>
       <b> <i>   
        <h1 style="font-size: 50px;">NIMRA</h1>
@@ -30,13 +30,13 @@
         <br>
         <br>
         <br>
-        <a href="./Cont/9index.html">Connect with me</a>
+        <a href="9index.html">Connect with me</a>
         <br>
-        <a href="./Cont/10index.html">Education</a>
+        <a href="10index.html">Education</a>
         <br>
-        <a href="./Cont/11index.html">Hobbies</a>
+        <a href="11index.html">Hobbies</a>
         <br>
-        <a href="./Cont/12index.html">Skills</a>
+        <a href="12index.html">Skills</a>
         </i></b>
     </body>
     </html>
